# BO4E-CLI

./: .envrc  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  STRUCTURE.md  cliff.toml  domain-specific-terms.txt  pyproject.toml  requirements.txt  rust-toolchain.toml  tox.ini
.github/workflows/: cd.yml  ci.yml  coverage.yml  dependabot-automerge.yml  dev_test.yml  formatting.yml  packaging_test.yml  python-publish.yml  pythonlint.yml  release-prepare.yml  release.yml  unittests.yml
crates/bo4e-cli/: Cargo.toml  STRUCTURE.md
crates/bo4e-cli/src/: cli.rs  completion.rs  console.rs  diff.rs  edit.rs  graph.rs  io.rs  lib.rs  main.rs  models.rs  utils.rs
crates/bo4e-cli/src/cli/: base.rs  completions.rs  diff.rs  edit.rs  generate.rs  graph.rs  pull.rs  repo.rs
crates/bo4e-cli/src/completion/: completers.rs  install.rs  marker.rs  paths.rs  shells.rs  show.rs  uninstall.rs
crates/bo4e-cli/src/completion/completers/: cache.rs  git_refs.rs  graph_classes.rs  link_template.rs  version_tags.rs
crates/bo4e-cli/src/completion/shells/: bash.rs  elvish.rs  fish.rs  nushell.rs  powershell.rs  zsh.rs
crates/bo4e-cli/src/console/: console.rs  highlighter.rs  mark.rs  palette.rs  spinner.rs
crates/bo4e-cli/src/diff/: diff.rs  filters.rs  matrix.rs  version.rs
crates/bo4e-cli/src/edit/: add.rs  non_nullable.rs  update_refs.rs
crates/bo4e-cli/src/graph/: cluster.rs  emit_common.rs  emit_dot.rs  emit_plantuml.rs  extract.rs  filter.rs  link_template.rs
crates/bo4e-cli/src/io/: changes.rs  cleanse.rs  config.rs  git.rs  github.rs  graph.rs  matrix.rs  schemas.rs
crates/bo4e-cli/src/models/: changes.rs  cli.rs  config.rs  graph.rs  json_schema.rs  matrix.rs  version.rs
crates/bo4e-cli/src/repo/: filter.rs
crates/bo4e-cli/src/utils/: tokio.rs
crates/bo4e-cli/tests/: full_bo4e.rs  generate_rust_crate_smoke.rs  generate_rust_plain_smoke.rs  generate_smoke.rs  graph_pipeline.rs  graph_plantuml_parity.rs  kroki_validation.rs  quiet_verbose.rs  regression_schema_parse.rs
crates/bo4e-cli/tests/fixtures/graph/golden/plantuml/: Angebot.puml
crates/bo4e-cli/wix/: main.wxs
crates/bo4e-codegen/: Cargo.toml  STRUCTURE.md
crates/bo4e-codegen/src/: env.rs  error.rs  imports.rs  layout.rs  lib.rs  naming.rs  output_type.rs  refs.rs  validate.rs
crates/bo4e-codegen/src/python/: imports.rs  mod.rs  pydantic.rs  pydantic_v2.rs  types.rs
crates/bo4e-codegen/src/python/sql_model/: mod.rs  plan.rs  renderer.rs
crates/bo4e-codegen/src/rust/: crate_.rs  imports.rs  mod.rs  plain.rs  render.rs  types.rs
crates/bo4e-codegen/src/rust/crate_/: mod.rs
crates/bo4e-codegen/src/rust/plain/: mod.rs
crates/bo4e-codegen/src/templates/python/pydantic/: BaseModel.jinja2  __init__.jinja2
crates/bo4e-codegen/src/templates/python/pydantic_v2/: __init__.jinja2
crates/bo4e-codegen/src/templates/python/sql_model/: BaseModel.jinja2  ManyLinks.jinja2  __init__.jinja2
crates/bo4e-codegen/src/templates/rust/crate_/: CargoToml.jinja2
crates/bo4e-codegen/src/templates/rust/plain/: DefaultImpl.jinja2  Enum.jinja2  ModRs.jinja2  RootModRs.jinja2  Struct.jinja2
crates/bo4e-codegen/tests/: compile_rust_crate.rs  copilot_review_round2.rs  integration_pydantic.rs  integration_pydantic_v2.rs  integration_rust_crate.rs  integration_rust_plain.rs  integration_sql_model.rs  parity_pydantic.rs  parity_pydantic_v2.rs  parity_sql_model.rs  roundtrip_pydantic.rs  roundtrip_rust_crate.rs  skeleton.rs
crates/bo4e-codegen/tests/fixtures/bo4e_invariants/: Toplevel.json
crates/bo4e-codegen/tests/fixtures/bo4e_invariants/bo/: Foo.json
crates/bo4e-codegen/tests/fixtures/bo4e_invariants/enum/: Color.json
crates/bo4e-codegen/tests/fixtures/bo4e_min/bo/: Angebot.json
crates/bo4e-codegen/tests/fixtures/bo4e_min/com/: Adresse.json
crates/bo4e-codegen/tests/fixtures/bo4e_sql_min/: .version
crates/bo4e-codegen/tests/fixtures/bo4e_sql_min/bo/: Angebot.json
crates/bo4e-codegen/tests/fixtures/bo4e_sql_min/com/: Adresse.json
crates/bo4e-codegen/tests/fixtures/bo4e_sql_min/enum/: Typ.json
crates/bo4e-codegen/tests/scripts/: import_smoke.py
crates/bo4e-schemas/: Cargo.toml  STRUCTURE.md
crates/bo4e-schemas/src/: lib.rs  visitable.rs
crates/bo4e-schemas/src/io/: schemas.rs
crates/bo4e-schemas/src/models/: json_schema.rs  macros.rs  mod.rs  schema_meta.rs  version.rs
dev_requirements/: requirements-coverage.txt  requirements-formatting.txt  requirements-linting.txt  requirements-packaging.txt  requirements-spell_check.txt  requirements-tests.in  requirements-tests.txt  requirements-type_check.txt
docs/plans/: 2026-03-02-visitor-pattern-design.md  2026-03-02-visitor-pattern.md  2026-03-03-edit-command-design.md  2026-03-03-edit-command-plan.md  2026-05-08-diff-command-design.md  2026-05-08-diff-command-plan.md  2026-05-08-generate-command-design.md  2026-05-08-generate-command-plan.md  2026-05-08-repo-versions-command-design.md  2026-05-08-repo-versions-command-plan.md  2026-05-09-cli-ux-and-robustness-design.md  2026-05-09-cli-ux-and-robustness-plan.md  2026-05-09-sql-model-generator-design.md  2026-05-09-sql-model-generator-plan.md
scripts/: fetch-bo4e-fixture.sh  smoke-import-pydantic.sh
src/: cli.rs  console.rs  edit.rs  io.rs  main.rs  models.rs  utils.rs
src/bo4e_cli/: __init__.py  __main__.py  types.py
src/cli/: base.rs  diff.rs  edit.rs  pull.rs  repo.rs  structs.rs
src/console/: colors.rs  console.rs  highlighter.rs  progress_bar.rs
src/diff/: diff.rs  matrix.rs  version.rs
src/edit/: add.rs  non_nullable.rs  update_refs.rs
src/io/: cleanse.rs  git.rs  github.rs  matrix.rs  schemas.rs
src/models/: changes.rs  cli.rs  config.rs  git.rs  json_schema.rs  macros.rs  matrix.rs  schema_meta.rs  version.rs
src/repo/: filter.rs
src/utils/: traverse.rs  traverse2.rs  visitable.rs
unittests/: .pylintrc  conftest.py  test_dummy.py
unittests/cli/: test_autocompletion.py  test_dummy.py  test_edit.py  test_generate_python.py  test_pull.py
unittests/io/: github.py  test_cleanse.py  test_config.py  test_github.py  test_schemas.py
(+279 files in other folders)
