[workspace]
resolver = "2"
members = ["crates/bo4e-cli", "crates/bo4e-schemas", "crates/bo4e-codegen"]

[workspace.package]
edition = "2024"
repository = "https://github.com/bo4e/BO4E-CLI"

[workspace.dependencies]
# placeholder for shared deps in later tasks

# Build profile used by cargo-dist when assembling release artifacts.
# Tuned for small binaries; all size knobs live here (not on `release`) so
# local `cargo build --release` and `cargo test` stay fast and unwinding.
#   * opt-level = "s": size-optimized codegen. Measured on this repo it trims
#     ~21% off the binary vs opt-level 3 for a ~14% slowdown on the CPU-bound
#     `graph` Louvain path. "z" shrinks another 0.6 MB but doubles that path's
#     runtime, so "s" is the deliberate size/perf balance.
#   * lto = true: fat cross-crate LTO (was "thin"; fat is smaller).
#   * codegen-units = 1: maximal inlining / dead-code elimination.
#   * panic = "abort": drops unwind tables. Safe here — the only `catch_unwind`
#     is a test helper (test profile keeps unwinding). A panicking async
#     download task now aborts the process instead of being reported as
#     "Panic occurred"; that is a bug path, acceptable for a CLI.
#   * strip = true: drop symbols (cargo-dist strips too; belt and suspenders).
[profile.dist]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# cargo-dist release pipeline.
#   * `installers` lists the user-facing install methods generated as release artifacts.
#     Shell installer (curl-pipe-sh), PowerShell installer (irm-pipe-iex), Windows MSI,
#     and a Homebrew formula published to a tap (see `tap` / `publish-jobs` below).
#     Tarballs/zips for every target are emitted automatically. Scoop bucket can be
#     added later once that repo exists.
#   * `targets` defines the cross-compile matrix. We cover the major desktop
#     platforms; add aarch64-unknown-linux-gnu later if ARM Linux users show up.
#   * `tap` is the GitHub repo cargo-dist commits the generated Homebrew formula
#     into on every tagged release. The tap must exist under `bo4e/homebrew-tap`
#     and the release workflow needs a `HOMEBREW_TAP_TOKEN` secret with write
#     access to it (see release.yml).
#   * `publish-jobs = ["homebrew"]` opts the Homebrew formula push into the
#     publish phase. macOS + linux-gnu bottles fall out of the existing target
#     matrix, so `brew install bo4e/tap/bo4e-cli` works on both.
#   * `pr-run-mode = "plan"` makes release.yml only *plan* on PRs (no upload),
#     so opening a PR doesn't burn artifact storage. Uploads happen on tag push.
#   * `install-path` chooses the binary install location for the shell/PS scripts
#     (CARGO_HOME falls back to ~/.local/bin if CARGO_HOME isn't set).
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "powershell", "msi", "homebrew"]
tap = "bo4e/homebrew-tap"
publish-jobs = ["homebrew"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
install-path = "CARGO_HOME"
# release.yml carries a hand-edited CHANGELOG pre-flight check (see the
# `HAND-EDITED` markers in that file). `allow-dirty = ["ci"]` tells dist to
# accept the modification instead of refusing every `plan` / `host` run.
# To regenerate release.yml via `dist generate --mode=ci`, comment this line
# out, run the regenerate, re-apply the HAND-EDITED block, then restore.
allow-dirty = ["ci"]
