[package]
name = "bo4e-cli"
version = "1.0.0"
description = "CLI for developers. It contains many useful features when working on using BO4E in your own projects."
authors = ["Leon Haffmans <leon.haffmans@hochfrequenz.de>"]
license = "MIT"
edition = "2024"
repository.workspace = true

[package.metadata.wix]
upgrade-guid = "8830C354-0DA5-4EA8-B8E5-9C4EEC5CD4C9"
path-guid = "AFDE8CC0-E482-4639-B4A0-B249A2402A48"
license = false
eula = false

[lib]
name = "bo4e_cli"
path = "src/lib.rs"

[[bin]]
name = "bo4e"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive", "env", "unicode", "wrap_help"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["full"] }
regex = "1.11.1"
lazy_static = "1.5.0"
chrono = { version = "0.4.44", features = ["serde"] }
duplicate = "2.0.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
url = { version = "2.5.6", features = ["serde"] }
itertools = "0.14.0"
bimap = { version = "0.6.3", features = ["serde"] }
serde_regex = "1.1.0"
octocrab = "0.44.1"
http = "1.4.0"
indicatif = { version = "0.18.0", features = ["tokio"] }
console = { version = "0.16.3", features = ["windows-console-colors"] }
walkdir = "2.5"
csv = "1"
indexmap = { version = "2", features = ["serde"] }
bo4e-schemas = { path = "../bo4e-schemas" }
bo4e-codegen = { path = "../bo4e-codegen", default-features = false }
petgraph = "0.6"
globset = "0.4"
rand = "0.8"

[features]
default          = ["python-pydantic", "python-sql-model", "rust-plain", "rust-crate"]
# Aggregate features pull in the local leaf features (which gate the CLI's
# subcommand variants) AS WELL AS the corresponding bo4e-codegen feature.
# Building with `--features python` alone used to compile the codegen backend
# while hiding both `python-pydantic` and `python-sql-model` from the CLI
# dispatcher; same trap for `--features rust`.
python           = ["python-pydantic", "python-sql-model"]
python-pydantic  = ["bo4e-codegen/python-pydantic"]
python-sql-model = ["bo4e-codegen/python-sql-model"]
rust             = ["rust-plain", "rust-crate"]
rust-plain       = ["bo4e-codegen/rust-plain"]
rust-crate       = ["bo4e-codegen/rust-crate"]

[dev-dependencies]
tempfile = "3"
ureq = { version = "2", default-features = false, features = ["tls"] }
