[package]
name = "bo4e-cli"
version = "1.2.5"
description = "CLI for developers. It contains many useful features when working on using BO4E in your own projects."
authors = ["Leon Haffmans <leon.haffmans@hochfrequenz.de>"]
license = "MIT"
edition = "2024"
repository.workspace = true
homepage = "https://github.com/bo4e/BO4E-CLI"

[package.metadata.wix]
upgrade-guid = "8830C354-0DA5-4EA8-B8E5-9C4EEC5CD4C9"
path-guid = "AFDE8CC0-E482-4639-B4A0-B249A2402A48"
license = false
eula = false

[lib]
name = "bo4e_cli"
path = "src/lib.rs"

[[bin]]
name = "bo4e"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
clap_complete_nushell = "4.5"
dirs = "6"
# Only a current-thread runtime is used directly (see utils/tokio.rs);
# `net` + `time` back `enable_all()`. reqwest pulls any further tokio features
# it needs via feature unification, so "full" is unnecessary bloat.
tokio = { version = "1.50.0", features = ["rt", "net", "time"] }
regex = "1.12.3"
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
url = { version = "2.5.8", features = ["serde"] }
bimap = { version = "0.6.3", features = ["serde"] }
serde_regex = "1.1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http = "1.4.1"
indicatif = { version = "0.18.4", features = ["tokio"] }
console = { version = "0.16.3", features = ["windows-console-colors"] }
walkdir = "2.5"
csv = "1"
indexmap = { version = "2", features = ["serde"] }
bo4e-schemas = { path = "../bo4e-schemas" }
bo4e-codegen = { path = "../bo4e-codegen", default-features = false }
petgraph = "0.8"
globset = "0.4"
rand = "0.10"
thiserror = "2"
# Schema archive download: one `GET .../tarball/{ref}` yields a gzipped tar of
# the whole repo at that ref, unpacked in-process. flate2's default (pure-Rust
# miniz_oxide) backend keeps cross-compilation free of a C toolchain.
flate2 = "1"
tar = "0.4"

[features]
default = [
    "python-pydantic",
    "python-sql-model",
    "rust-plain",
    "rust-crate",
    "dynamic-completion",
]
# Aggregate features pull in the local leaf features (which gate the CLI's
# subcommand variants) AS WELL AS the corresponding bo4e-codegen feature.
# Building with `--features python` alone used to compile the codegen backend
# while hiding both `python-pydantic` and `python-sql-model` from the CLI
# dispatcher; same trap for `--features rust`.
python           = ["python-pydantic", "python-sql-model"]
python-pydantic  = ["bo4e-codegen/python-pydantic"]
python-sql-model = ["bo4e-codegen/python-sql-model"]
rust             = ["rust-plain", "rust-crate"]
rust-plain       = ["bo4e-codegen/rust-plain"]
rust-crate       = ["bo4e-codegen/rust-crate"]
dynamic-completion = []

[dev-dependencies]
tempfile = "3"
ureq = { version = "2", default-features = false, features = ["tls"] }
