[package]
name = "bo4e-codegen"
version = "0.1.0"
edition = "2024"

[features]
default          = ["python", "rust"]
python           = ["python-pydantic", "python-sql-model"]
rust             = ["rust-plain", "rust-crate"]
python-pydantic  = []
python-sql-model = []
rust-plain       = []
# `rust-crate` wraps the `rust-plain` output (Cargo.toml + lib.rs around the
# generated module tree) and calls `rust::plain::generate` internally, so it
# needs the plain flavour's code + templates compiled in.
rust-crate       = ["rust-plain"]

[dependencies]
bo4e-schemas = { path = "../bo4e-schemas" }
minijinja    = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"

[dev-dependencies]
tempfile = "3"
walkdir  = "2"
semver   = "1"
