[package]
name = "bo4e-codegen"
version = "0.1.0"
edition = "2024"

[features]
default          = ["python", "rust"]
python           = ["python-pydantic", "python-sql-model"]
rust             = ["rust-plain", "rust-crate"]
python-pydantic  = []
python-sql-model = []
rust-plain       = []
# `rust-crate` wraps the `rust-plain` output (Cargo.toml + lib.rs around the
# generated module tree) and calls `rust::plain::generate` internally, so it
# needs the plain flavour's code + templates compiled in.
rust-crate       = ["rust-plain"]

[dependencies]
bo4e-schemas = { path = "../bo4e-schemas" }
chrono       = { version = "0.4", default-features = false, features = ["std"] }
# Trimmed to the template features actually used: control flow + `{% include %}`
# + `path_loader` + builtin filters (indent/lower/join/sort/length) + serde
# `context!`. Dropped from defaults: `macros` ({% macro %} unused),
# `adjacent_loop_items` (no loop.previtem), `deserialization` (no ViaDeserialize).
minijinja = { version = "2", default-features = false, features = [
    "builtins",
    "multi_template",
    "loader",
    "serde",
    "std_collections",
    "debug",
] }
rust_decimal = { version = "1", default-features = false, features = ["std"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
uuid         = "1"

[dev-dependencies]
tempfile = "3"
walkdir  = "2"
semver   = "1"
