[package]
name = "bo4e-schemas"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"
